PC-132: Fix bug where clicking the input dropdown menu doesn't expand or collapse

--- a/app/assets/stylesheets/application/input.scss
+++ b/app/assets/stylesheets/application/input.scss
@@ -53,9 +53,9 @@ textarea {
   outline: 1px solid $primary;
   border-inline: 5px solid $white !important;
   border-block: none !important;
-  width: calc(100% + 2px) !important;
-  margin-left: -2px;
+  width: 100%!important;
   max-height: 185px !important;
+  box-sizing: border-box !important;
 }
 
 .rbt-highlight-text {
